# Folktales-Graph-RAG

./: .env  .gitignore  2_analysis.ipynb  2_sharing_joy_and_sorrow.json  3_ingestion.ipynb  4_retrieval.ipynb  5_bis_evaluation.ipynb  5_evaluation.html  5_evaluation.ipynb  README.md  analysis.ipynb  annotation.ipynb  cleaning.ipynb  config.py  evaluation.ipynb  evaluator.py  graph_builder.py  ingestion.ipynb  neo4j.ipynb  neo4j_manager.py  pyproject.toml  retrieval.ipynb  test.ipynb  test.json  test.txt  text.txt
agents/: agent_system.py  agentic_rag.py  answer_critic.py  multi_agent_system.py  question_descomposer.py  rag_tool_factory.py  terminal_tool_factory.py  tool_factory.py
annotation/: main.py
data/: benchmark_data.csv  evaluation_results_20260512_101915.csv  evaluation_results_20260513_021958.csv  evaluation_results_20260513_031122.csv
evaluation/: evaluator.py
graph/: graph_builder.py  neo4j_manager.py
information/: place.json  wiki_summaries.json
models/: agent.py  event.py  folktale.py  object.py  place.py  relationship.py  role.py
out2/: 0_momotaro.json  14_the_thieves_and_the_cock.json  1_the_birdcatcher.json  2_sharing_joy_and_sorrow.json  5_how_the_tiger_got_his_stripes.json
out_prueba/: 0_momotaro.json  0_momotaro_0_7.json  0_momotaro_annotation.json  1_the_birdcatcher_annotation.json
retrievers/: base_retriever.py  fulltext_retriever.py  hybrid_retriever.py  text2cyper.py  text2cypher.py  vector_retriever.py
schemas/: agent.py  event.py  folktale.py  relationship.py
utils/: format_utils.py  loader.py  misc.py  models.py  (+2 more)
(+24 files in other folders)
