[project]
name = "folktales-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
]
